--- a/.github/workflow/act.yml
+++ b/.github/workflow/act.yml
@@ -2,27 +2,25 @@ name: build-test
 
 on:
   pull_request:
-    paths-ignore:
-      - '**.md'
+    branches:
+      - main
   push:
     branches:
       - main
-      - releases/*
-    paths-ignore:
-      - '**.md'
+     
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Node 16.x
+      - name: Setup Node 14.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 14.x
           cache: npm
       - run: npm ci
       - run: npm run build
